@@ -1,3 +1,7 @@
+2013-07-23 Juan Manuel Ramón Vigo <juanmanuel.ramon@artica.es>
+	
+	* util/pandora_revent_create.pl: Pandora revent only for create events.
+
 2013-07-17  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Do not execute more than one alert per trap.
